--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -13,3 +13,4 @@ jobs:
       - uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          args: --ignore RUSTSEC-2024-0436
