--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -9,8 +9,8 @@ jobs:
   security-audit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions-rs/audit-check@v1
+      - uses: actions/checkout@v4
+      - uses: rustsec/audit-check@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --ignore RUSTSEC-2024-0436
